--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,16 +1,48 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: "Manrope", sans-serif;
 }
 
-.sticky__header{
+.swiper-pagination-bullet {
+  height: 12px !important ;
+  width: 12px !important ;
+  border: 1px solid #181a1e !important ;
+  opacity: 100% !important ;
+  background: #fff !important;
+}
+
+.swiper-pagination-bullet-active {
+  background: #0067ff !important;
+  border: none !important;
+}
+
+.swiper {
+  padding-bottom: 70px !important;
+}
+
+.swiper-slide.swiper-slide-next {
+  background: #0067ff;
+  border-radius: 12px;
+  box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3) !important;
+}
+
+.swiper-slide.swiper-slide-next h4,
+.swiper-slide.swiper-slide-next p {
+  color: #fff !important;
+}
+
+.swiper-pagination{
+  top: 90% !important;
+}
+
+.sticky__header {
   width: 100%;
   height: 80px;
   line-height: 80px;
@@ -18,12 +50,12 @@ body{
   top: 0;
   left: 0;
   z-index: 99999;
-  background:white;
+  background: white;
   box-shadow: 3px 3px -8px 3px #ddd;
 }
 
-@media only screen and (max-width:768px){
-  .navigation{
+@media only screen and (max-width: 768px) {
+  .navigation {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -34,13 +66,13 @@ body{
     display: none;
   }
 
-  .menu{
+  .menu {
     width: 15rem;
     height: 100%;
     position: absolute;
     top: 0;
     right: 0;
-    background:#fff ;
+    background: #fff;
     z-index: 200;
     flex-direction: column;
     justify-content: center;
@@ -48,7 +80,7 @@ body{
     line-height: 30px;
   }
 
-  .show__menu{
+  .show__menu {
     display: block;
   }
 }
